# OctoPrint-MarlinSlider

./: MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
extras/: marlinslider.md
extras/github/: bug_report.yml  feature_request.yml
octoprint_marlinslider/: __init__.py
octoprint_marlinslider/static/css/: marlinslider.css
octoprint_marlinslider/static/js/: marlinslider.js
octoprint_marlinslider/templates/: marlinslider.jinja2
